@@ -205,6 +205,10 @@ input[type="submit"]:is(:hover, :active) {
 	border-color: var(--clr-def);
 }
 
+input.dirty:not(:focus):invalid {
+	background-color: var(--clr-error);
+}
+
 .validation {
 	padding: 0.5rem;
 	margin: 0.5rem 0;
